# swar

./: Cargo.toml  README.md
src/: lib.rs  u128.rs
src/u128/: bitsn.rs  bitsnxn.rs
tests/: count_ones.rs
